--- a/content/settings.json
+++ b/content/settings.json
@@ -21,6 +21,6 @@
   "secondary_color": "",
   "icon": "/img/icon.png",
   "store_id": 45942 ,
-  "description": "My PWA Shop",
+  "description": "Fit.Ecom",
   "large_icon": "/img/large-icon.png"
 }
