--- a/content/settings.json
+++ b/content/settings.json
@@ -1,26 +1,26 @@
 {
   "domain": "ecomplus-storefront.netlify.app",
   "currency_symbol": "R$",
-  "primary_color": "",
+  "primary_color": "#0de6df",
   "theme": {
     "bootswatch": "_",
     "custom": "_"
   },
-  "icons_font": "_",
-  "font_family": "_",
   "bg_color": "#ffffff",
   "repository": "",
   "logo": "/img/uploads/logo.png",
-  "name": "My Shop",
+  "name": "Fit Ecom",
   "short_name": "My Shop",
   "lang": "pt_br",
   "currency": "BRL",
   "mini_logo": "",
-  "favicon": "/img/uploads/favicon.png",
+  "font_family": "_",
+  "favicon": "/img/uploads/logo-fit_ecom-1-.svg",
+  "icons_font": "_",
   "country_code": "BR",
-  "secondary_color": "",
-  "icon": "/img/icon.png",
-  "store_id": 45942 ,
+  "secondary_color": "#000000",
+  "icon": "/img/uploads/logo-fit_ecom-1-.svg",
+  "store_id": 45942,
   "description": "Fit.Ecom",
-  "large_icon": "/img/large-icon.png"
+  "large_icon": "/img/uploads/logo-fit_ecom-1-.svg"
 }
