--- a/content/settings.json
+++ b/content/settings.json
@@ -8,7 +8,7 @@
   },
   "bg_color": "#ffffff",
   "repository": "",
-  "logo": "/img/uploads/logo.png",
+  "logo": "/img/uploads/logo-fit_ecom-1-.svg",
   "name": "Fit Ecom",
   "short_name": "My Shop",
   "lang": "pt_br",
